Fix template/BS4 viewport padding on mobile.
Re #241

--- a/src/static_global/sass/_layout.sass
+++ b/src/static_global/sass/_layout.sass
@@ -23,6 +23,10 @@ body
 .xsd-module-content
   @include make-col(12)
 
+  // Margin fix for mobile
+  @include media-breakpoint-down(sm)
+    padding: 0 15px // FIXME should be based on BS4 var, cba to find right now
+
 @include media-breakpoint-up(md)
   .xsd-module-nav
     @include make-col(4)
